k8s/01-redis-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: pixelwar
  labels:
    app: redis
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      name: redis
      targetPort: 6379
