k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixelwar-frontend-ingress
  namespace: pixelwar
spec:
  ingressClassName: nginx
  rules:
    - host: pixelwar.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixelwar-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixelwar-api-ingress
  namespace: pixelwar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pixelwar.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pixelwar-backend
                port:
                  number: 8000
